# rock-paper-scissors-classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  lightning.ipynb  main.py  pyproject.toml  text
.dvc/: config
conf/: config.yaml
conf/data/: data.yaml  inference_data.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: inference_model.yaml
conf/trainer/: trainer.yaml
lightning_logs/version_0/: events.out.tfevents.1766706429.MacBook-Air-Hakimova.local.39123.0
lightning_logs/version_1/: events.out.tfevents.1766706466.MacBook-Air-Hakimova.local.39234.0
lightning_logs/version_2/: events.out.tfevents.1766706488.MacBook-Air-Hakimova.local.39409.0
lightning_logs/version_3/: events.out.tfevents.1766706660.MacBook-Air-Hakimova.local.39566.0
lightning_logs/version_4/: events.out.tfevents.1766706828.MacBook-Air-Hakimova.local.39908.0
lightning_logs/version_5/: events.out.tfevents.1766707100.MacBook-Air-Hakimova.local.40354.0
lightning_logs/version_6/: events.out.tfevents.1766707300.MacBook-Air-Hakimova.local.40669.0
lightning_logs/version_7/: events.out.tfevents.1766707424.MacBook-Air-Hakimova.local.40801.0
plots/: plot_metric.py  plt_from_MLFlow.py
rps/: data.py  infer.py  model.py  module.py  train.py  train_with_MLFlow.py  train_with_dvc.py
rps/utils/: __init__.py  dvc_data.py
tb_logs/rps/version_0/: events.out.tfevents.1766710140.MacBook-Air-Hakimova.local.43519.0
tb_logs/rps/version_1/: events.out.tfevents.1766710217.MacBook-Air-Hakimova.local.43647.0
tb_logs/rps/version_2/: hparams.yaml  (+1 more)
(+44 files in other folders)
